# ornn-benchmarking

./: .dockerignore  .gcloudignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  deploy.sh  pyproject.toml
.factory/: init.sh  services.yaml
.factory/research/: mamf-finder.md  nccl-tests.md  nvbandwidth.md
.factory/skills/backend-api-worker/: SKILL.md
.factory/skills/benchmark-infra-worker/: SKILL.md
.factory/skills/python-cli-worker/: SKILL.md
.factory/skills/release-worker/: SKILL.md
.factory/validation/api-backend/user-testing/: synthesis.json  test_server.py
.factory/validation/bench-core/user-testing/: synthesis.json
.factory/validation/bench-infra/user-testing/: synthesis.json
.factory/validation/core-cli/user-testing/: synthesis.json
.github/workflows/: ci.yml  publish.yml
api/: __init__.py  auth.py  config.py  dependencies.py  main.py  models.py  rate_limit.py  scoring.py
api/routers/: health.py  runs.py  verify.py
docs/: api-reference.md  architecture.md  cli-usage.md  deployment.md
ornn-bench-infra/: benchmark_node.sh  provision.sh  toolchain.env
ornn-bench-infra/provider-notes/: aws.md  azure.md  gcp.md  oracle.md
src/ornn_bench/: __init__.py  __main__.py  api_client.py  cli.py  display.py  models.py  runner.py  scoring.py  system.py
src/ornn_bench/runbook/: __init__.py  compute.py  interconnect.py  manifest.py  memory.py  monitoring.py  parsers.py  postflight.py  preflight.py
tests/: conftest.py  test_models.py  test_scoring.py  test_smoke.py
tests/api/: conftest.py  test_health.py  test_idempotent_ingest.py  test_rate_limiting.py  test_revoked_key_behavior.py  test_runs_ingest.py  test_runs_retrieval.py  test_server_scoring.py  test_verify_endpoint.py
tests/cli/: test_help_output.py  test_info_command.py  test_no_gpu_guardrails.py  test_non_tty_output.py  test_partial_failure_flow.py  test_report_command.py  test_run_orchestration.py  test_upload_command.py
tests/fixtures/: sample_report.json  sample_scored_report.json
tests/fixtures/mamf_finder/: bf16_range.txt  fixed_shape.txt  fp16_range.txt  fp8_e4m3_range.txt  fp8_e5m2_range.txt
tests/fixtures/nccl_tests/: all_gather.txt  all_reduce_1gb.txt  all_reduce_1gb_8gpu.txt  all_reduce_sweep.txt  broadcast.txt  reduce_scatter.txt  sendrecv.txt
tests/fixtures/nvbandwidth/: d2d_bidir.json  d2d_write.json  d2h.json  device_local_copy_ce.json  device_local_copy_sm.json  h2d.json
tests/fixtures/nvidia_smi/: dmon_output.txt  nvidia_smi_q.txt  nvlink_status.txt  post_run_nvidia_smi_q.txt  query_gpu.txt  xid_errors.txt
tests/infra/: test_bench_infra_layout.py  test_benchmark_node_runner.py
tests/integration/: test_run_upload_flow.py
tests/release/: test_ci_workflow.py  test_deploy_config_constraints.py  test_live_deployment.py  test_packaging_entrypoint.py  test_publish_workflow.py
tests/runbook/: test_compute_matrix.py  test_interconnect_matrix.py  test_manifest_and_durability.py  test_memory_matrix.py  test_monitoring_and_postflight.py  test_preflight_inventory.py
tests/scoring/: test_formula_and_aggregation.py  test_invalid_metric_paths.py  test_report_scoring_from_sections.py
(+22 files in other folders)
