[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ornn-bench"
version = "0.2.0"
description = "Ornn GPU Benchmarking CLI — run standardized GPU benchmarks, compute Ornn-I/Ornn-T scores, and upload results."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ornn AI"},
]
keywords = ["gpu", "benchmark", "nvidia", "cuda", "inference", "training", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Benchmark",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/Ornn-AI/ornn-benchmarking"
Repository = "https://github.com/Ornn-AI/ornn-benchmarking"
"Bug Tracker" = "https://github.com/Ornn-AI/ornn-benchmarking/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
    "pyyaml>=6.0",
    "ornn-bench[api]",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "google-cloud-firestore>=2.14.0",
]

[project.scripts]
ornn-bench = "ornn_bench.cli:app_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "api", "tests"]
# Exclude generated validation artifacts from lint scope; these files are
# auto-generated by the mission validation system and should not be held to
# project lint rules.
exclude = [".factory"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # Use X | Y for union types (wait for 3.10 minimum maturity)
]

[tool.ruff.lint.isort]
known-first-party = ["ornn_bench"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
